# tg_bot_template

./: .env.example  .gitignore  README.md  pyproject.toml  start_api.sh
src/infrastructure/: settings.py
src/infrastructure/api/: app.py
src/infrastructure/db/: config.py
